--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "element-plus": "^2.8.8",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
